fix scrollbar for recent-visitted-post-bar

--- a/src/app/navigation_bar/component/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation_bar/component/navigation-bar/navigation-bar.component.scss
@@ -65,6 +65,4 @@ span {
 
 #trademark {
     text-align: center;
-    margin-top: 50px;
-    margin-bottom: 10px;
 }
